# test

./: .gitignore  .travis.yml  CMakeLists.txt  a.cpp
3rd/NCNN/ncnn/: layer_type_enum.h
app/: build.gradle
app/src/androidTest/java/android/test/com/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/android/test/com/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/test/java/android/test/com/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
