# -*- mode:cmake -*-
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(ROOT_DIR    ${CMAKE_SOURCE_DIR})
SET(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

PROJECT(TestNcnn 
        LANGUAGES CXX 
        VERSION 2.0)
SET(PLATFORM Linux)
set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -fPIC -fvisibility=hidden -lstdc++")

INCLUDE_DIRECTORIES(
    ${PROJECT_DIR}/src
    ${PROJECT_DIR}/3rd/NCNN
)
LINK_DIRECTORIES(
    ${PROJECT_DIR}/3rd/NCNN/${PLATFORM}
)
SET(SOURCE_FILES
    ${PROJECT_DIR}/src/main.cpp
)
ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    COMPILE_FLAGS ${CMAKE_CXX_FLAGS} 
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl ncnn)
